# Forcivate_Interview_Task_Habiba_Elsayed

./: README.md
config/: VoiceConfig.cpp  VoiceConfig.h
cpp/: CMakeLists.txt  main.cpp
cpp/models/: Post.h
cpp/python/: llm_adapter.py
cpp/services/: DraftEngine.h
models/: Comment.h
services/: DraftEngine.cpp  ReviewQueue.cpp  ReviewQueue.h  SafetyGate.cpp  SafetyGate.h
